fix: update root

--- a/wafermap_clustering_pipeline/configs/config.json
+++ b/wafermap_clustering_pipeline/configs/config.json
@@ -13,7 +13,7 @@
             "home": "/{{project_name}}"
         },
         "linux": {
-            "root": "/application/{{user}}",
+            "root": "/appli/udb/DBSCAN",
             "home": "/home/{{user}}"
         }
     },
