--- a/wafermap_clustering_pipeline/configs/config.json
+++ b/wafermap_clustering_pipeline/configs/config.json
@@ -4,8 +4,8 @@
         "logs": "{{root}}/logs",
         "tmp": "{{root}}/tmp",
         "input": "{{root}}/process/in",
-        "output": "{{root}}/process/out",
-        "error": "{{root}}/process/error"
+        "output": "{{root}}/process/{loader_name}/out",
+        "error": "{{root}}/process/{loader_name}/error"
     },
     "platforms": {
         "windows": {
