fix: set error_path as Path

--- a/wafermap_clustering_pipeline/configs/config.json
+++ b/wafermap_clustering_pipeline/configs/config.json
@@ -5,7 +5,7 @@
         "tmp": "{{root}}/tmp",
         "input": "{{root}}/process/in",
         "output": "{{root}}/process/{loader_name}/out",
-        "error": "{{root}}/process/{loader_name}/error"
+        "error": "{{root}}/process/error"
     },
     "platforms": {
         "windows": {
