--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
 wafermap-clustering==0.3.20
-klarf-reader==0.4.2
+klarf-reader==0.4.3
+scikit-learn == 1.2.1
+setuptools == 65.6.3
+hdbscan == 0.8.29
