feat: update core with tmp file + use a queue

--- a/wafermap_clustering_pipeline/configs/config.json
+++ b/wafermap_clustering_pipeline/configs/config.json
@@ -2,7 +2,7 @@
     "project_name": "wafermap-clustering-pipeline",
     "directories": {
         "logs": "{{root}}/logs",
-        "tmp": "{{root}}/tmp",
+        "tmp": "{{root}}/process/tmp",
         "input": "{{root}}/process/in",
         "output": "{{root}}/process/out",
         "error": "{{root}}/process/error",
